# ComfyUI-Sequencer

./: .comfyignore  .gitattributes  LICENSE  README.md  RELEASE_NOTES_v0.1.0-beta.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
lib/: paths.py  sequence.py  smart.py  transitions.py
nodes/: sequencer.py  spill.py
tests/: conftest.py  test_imports.py  test_paths.py  test_sequence_smoke.py  test_smart_render.py
