[project]
name = "ComfyUI-Sequencer"
version = "1.0.0"
description = "Join video clips end-to-end — instant, lossless, zero VRAM. Editor-style transitions: cut, dissolve, fades, wipes, slides. Works with loaded files or clips generated in-workflow."
requires-python = ">=3.10"
license = { file = "LICENSE" }

[tool.comfy]
PublisherId = "fundy"
DisplayName = "Video Sequencer"
