[project]
name = "ComfyUI-Sequencer"
version = "0.2.0"
description = "Join video clips end-to-end — instant, lossless, zero VRAM. Editor-style transitions: cut, dissolve, fades, wipes, slides. Works with loaded files or clips generated in-workflow."
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Force01/ComfyUI-Sequencer"
"Bug Tracker" = "https://github.com/Force01/ComfyUI-Sequencer/issues"
Documentation = "https://github.com/Force01/ComfyUI-Sequencer#readme"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.comfy]
PublisherId = "force01"
DisplayName = "Video Sequencer"
Icon = "https://raw.githubusercontent.com/Force01/ComfyUI-Sequencer/main/assets/icon.png"
requires-comfyui = ">=0.24.0"
